# -

./: .gitignore  README.md
RK2206主控代码/PJ_TEST_01/: BUILD.gn  error_log.txt  main.c
RK2206主控代码/PJ_TEST_01/include/: BEEP.h  DATA_Basic.h  KEY.h  SU_03T.h  UART0_M0.h  all.h  gpio_con.h  lcd.h  lcd_front.h  lora.h  pwm_sg.h  wifi.h
RK2206主控代码/PJ_TEST_01/src/: BEEP.c  DATA_Basic.c  KEY.c  SU_03T.c  UART0_M0.c  gpio_con.c  lcd.c  lora.c  pwm_sg.c  wifi.c
喂粮从机代码/Core/Inc/: IRQHandler.h  all_include.h  fun.h  hx1117.h  lora.h  sg90.h  task.h
喂粮从机代码/Core/Src/: IRQHandler.c  adc.c  delay.c  fun.c  gpio.c  gps.c  hx1117.c  lora.c  main.c  sg90.c  stm32f4xx_it.c  task.c  tim.c  usart.c
穿戴从机代码/Core/Inc/: IRQHandler.h  all_include.h  delay.h  gps.h  i2c_hal.h  i2c_hal_mpu6050.h  ina226.h  main.h  mpu6050.h  nbiot.h  stm32f4xx_hal_conf.h  task.h
穿戴从机代码/Core/Src/: IRQHandler.c  fun.c  gpio.c  gps.c  i2c.c  i2c_hal.c  i2c_hal_mpu6050.c  ina226.c  inv_mpu.c  inv_mpu_dmp_motion_driver.c  main.c  mpu6050.c  nbiot.c  rtc.c  stm32f4xx_it.c  task.c  usart.c
